--- a/index.html
+++ b/index.html
@@ -5,32 +5,35 @@
     <title>Сравнение открытых OLAP-систем Big Data: ClickHouse, Druid и Pinot</title>
     <style>
       .article-header > h1 {
-      font-size: 2.4375em;
+        font-size: 2.4375em;
       }
       .article-header cite {
-      font-style: normal;
+        font-style: normal;
       }
       .article-section > h1 {
-      font-size: 1.875em;
+        font-size: 1.875em;
+      }
+      .article-section blockquote {
+        background-color: moccasin;
       }
       .article-section figure img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
       }
       .article-section figcaption {
-      text-align: center;
-      font-style: italic;
+        text-align: center;
+        font-style: italic;
       }
       .article-section .table-with-apps-properties {
-      max-width: 650px;
-      border-collapse: collapse;
+        max-width: 650px;
+        border-collapse: collapse;
       }
       .article-section .table-with-apps-properties td, .article-section .table-with-apps-properties th {
-      border: 1px solid black;
+        border: 1px solid black;
       }
       .article-section .table-with-apps-properties thead th {
-      text-align: left;
+        text-align: left;
       }
     </style>
   </head>
