--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       }
       .article-section figure img {
         display: block;
+	max-width: 100%;
         margin-left: auto;
         margin-right: auto;
       }
